# newline-iwb-converter

./: .gitignore  README.md  iwb2pdf.spec  iwb2svg.spec  pyproject.toml
.github/workflows/: build-executables.yml
src/newline_iwb_converter/: __init__.py  iwb2pdf.py  iwb2svg.py
src/newline_iwb_converter/pdf_engines/: base.py  inkscape_engine.py  svglib_engine.py
